some changes based on sonarCloud review